PokemonTabletopAdventures_v3/PTA3.css
/* ... */
input.sheet-color-setting-grass:checked ~ div.sheet-wrapper,
input.sheet-color-setting-grass-move:checked ~ div.sheet-pokemon-move {
  background-color: var(--poke-grass);
}
input.sheet-color-setting-grass-move:checked ~ div div button.sheet-move-roller {
  box-shadow: inset 0px 0px 10px var(--poke-grass-shaded), 0px 0px 10px 1px var(--poke-grass-shaded);
  color: var(--poke-grass-shaded);
}

input.sheet-color-setting-ground:checked ~ div.sheet-wrapper,
input.sheet-color-setting-ground-move:checked ~ div.sheet-pokemon-move {
  background-color: var(--poke-ground);
}
input.sheet-color-setting-ground-move:checked ~ div div button.sheet-move-roller {
  box-shadow: inset 0px 0px 10px var(--poke-ground-shaded), 0px 0px 10px 1px var(--poke-ground-shaded);
  color: var(--poke-ground-shaded);
}

input.sheet-color-setting-ice:checked ~ div.sheet-wrapper,
input.sheet-color-setting-ice-move:checked ~ div.sheet-pokemon-move {
  background-color: var(--poke-ice);
}
input.sheet-color-setting-ice-move:checked ~ div div button.sheet-move-roller {
  box-shadow: inset 0px 0px 10px var(--poke-ice-shaded), 0px 0px 10px 1px var(--poke-ice-shaded);
  color: var(--poke-ice-shaded);
}

input.sheet-color-setting-normal:checked ~ div.sheet-wrapper,
input.sheet-color-setting-normal-move:checked ~ div.sheet-pokemon-move {
  background-color: var(--poke-normal);
}
input.sheet-color-setting-normal-move:checked ~ div div button.sheet-move-roller {
  box-shadow: inset 0px 0px 10px var(--poke-normal-shaded), 0px 0px 10px 1px var(--poke-normal-shaded);
  color: var(--poke-normal-shaded);
}

input.sheet-color-setting-poison:checked ~ div.sheet-wrapper,
input.sheet-color-setting-poison-move:checked ~ div.sheet-pokemon-move {
  background-color: var(--poke-poison);
}
input.sheet-color-setting-poison-move:checked ~ div div button.sheet-move-roller {
  box-shadow: inset 0px 0px 10px var(--poke-poison-shaded), 0px 0px 10px 1px var(--poke-poison-shaded);
  color: var(--poke-poison-shaded);
}

input.sheet-color-setting-psychic:checked ~ div.sheet-wrapper,
input.sheet-color-setting-psychic-move:checked ~ div.sheet-pokemon-move {
  background-color: var(--poke-psychic);
}
input.sheet-color-setting-psychic-move:checked ~ div div button.sheet-move-roller {
  box-shadow: inset 0px 0px 10px var(--poke-psychic-shaded), 0px 0px 10px 1px var(--poke-psychic-shaded);
  color: var(--poke-psychic-shaded);
}

input.sheet-color-setting-rock:checked ~ div.sheet-wrapper,
input.sheet-color-setting-rock-move:checked ~ div.sheet-pokemon-move {
  background-color: var(--poke-rock);
}
input.sheet-color-setting-rock-move:checked ~ div div button.sheet-move-roller {
  box-shadow: inset 0px 0px 10px var(--poke-rock-shaded), 0px 0px 10px 1px var(--poke-rock-shaded);
  color: var(--poke-rock-shaded);
}

input.sheet-color-setting-steel:checked ~ div.sheet-wrapper,
input.sheet-color-setting-steel-move:checked ~ div.sheet-pokemon-move {
  background-color: var(--poke-steel);
}
input.sheet-color-setting-steel-move:checked ~ div div button.sheet-move-roller {
  box-shadow: inset 0px 0px 10px var(--poke-steel-shaded), 0px 0px 10px 1px var(--poke-steel-shaded);
  color: var(--poke-steel-shaded);
}

input.sheet-color-setting-water:checked ~ div.sheet-wrapper,
input.sheet-color-setting-water-move:checked ~ div.sheet-pokemon-move {
  background-color: var(--poke-water);
}
input.sheet-color-setting-water-move:checked ~ div div button.sheet-move-roller {
  box-shadow: inset 0px 0px 10px var(--poke-water-shaded), 0px 0px 10px 1px var(--poke-water-shaded);
  color: var(--poke-water-shaded);
}

/* End fancy colors */

.sheet-logo {
  width: 280px;
  height: 150px;
  margin-left: auto;
  margin-right: auto;
  margin-top: -15px;
}

.sheet-inventory {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: center;
  height: 100%;
  margin-top: 10px;
}

.sheet-2col-centered {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
}

.sheet-ball {
  display: block;
  text-align: center;
  margin-right: auto;
  margin-left: auto;
  min-width: 60px;
  min-height: 60px;
  background-position: 50% 40%;
  background-repeat: no-repeat;
}

.sheet-hp-ball {
  background-image: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/PokemonTabletopAdventures_v3/images/StatBallHP.png");
}

.sheet-atk-ball {
  background-image: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/PokemonTabletopAdventures_v3/images/StatBallAtk.png");
}

.sheet-def-ball {
  background-image: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/PokemonTabletopAdventures_v3/images/StatBallDef.png");
}

.sheet-spatk-ball {
  background-image: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/PokemonTabletopAdventures_v3/images/StatBallSpAtk.png");
}

.sheet-spdef-ball {
  background-image: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/PokemonTabletopAdventures_v3/images/StatBallSpDef.png");
}

.sheet-spd-ball {
  background-image: url("https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/PokemonTabletopAdventures_v3/images/StatBallSpd.png");
}

.sheet-character-name-grid {
  display: grid;
  grid-template-columns: 1fr 4fr;
  align-items: center;
}

.sheet-character-class-grid {
  display: grid;
  grid-template-columns: 1fr 6fr 1fr 2fr;
  align-items: center;
}

.sheet-character-stat-grid {
  display: grid;
  justify-items: center;
  text-align: center;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
}

.sheet-half-text {
  width: 105px;
}

.sheet-tiny-text {
  width: 50px;
}

.sheet-damage-dice {
  width: 52px;
  text-align: left;
  padding-left: 0px;
}

.sheet-move-text {
  width: 130px;
}

.sheet-top-information[type="number"] {
  background-color: rgba(255, 153, 153, 0);
  outline: none;
  border-width: 2px;
  border-color: grey;
  border-style: none none solid none;
  font-weight: bold;
}
/* ... */

