fix: Makes stat and mod labels less squashed

--- a/PokemonTabletopAdventures_v3/PTA3.css
+++ b/PokemonTabletopAdventures_v3/PTA3.css
@@ -254,6 +254,11 @@ input.sheet-color-setting-water-move:checked ~ div div button.sheet-move-roller 
 
 /* End fancy colors */
 
+div.sheet-character-stat-grid b, div.sheet-character-stat-grid p {
+  padding-bottom: 10px;
+  padding-top: 5px;
+}
+
 .sheet-logo {
   width: 280px;
   height: 150px;
@@ -284,7 +289,7 @@ input.sheet-color-setting-water-move:checked ~ div div button.sheet-move-roller 
   margin-left: auto;
   min-width: 60px;
   min-height: 60px;
-  background-position: 50% 40%;
+  background-position: 50% 30%;
   background-repeat: no-repeat;
 }
 
